kubernetes/prod/deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: explorer-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: explorer-service
  template:
    metadata:
      labels:
        app: explorer-service
    spec:
      containers:
      - name: explorer-service
        image: ${CONTAINER_REGISTRY}/explorer-server:${IMAGE_TAG}
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
