kubernetes/prod/service.yaml

apiVersion: v1
kind: Service
metadata:
  name: explorer-service
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: explorer-service
